fix: toggle theme on safari

--- a/packages/core/src/components/ThemeToggle.module.css
+++ b/packages/core/src/components/ThemeToggle.module.css
@@ -12,8 +12,8 @@
 }
 
 .themeToggle svg {
-  width: 100%;
-  height: 100%;
+  width: 15px;
+  height: 15px;
 }
 
 .themeToggle:hover {
